# TrendTrack

./: ai_prediction.py  ai_predictor.ipynb  application_architecture.py  binance_api.py  config.py  crypto_calculator.py  crypto_data.py  features.pkl  main.py  pyproject.toml  requirements.txt
src/ai/: ai_prediction.py  ai_predictor.ipynb
src/gui/: application_architecture.py  displaying_information.py
src/logic/: binance_api.py  crypto_calculator.py  crypto_data.py
