[project]
name = "trendtrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-py-to-exe>=2.48.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyinstaller>=6.17.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tkinterweb>=4.11.0",
    "yfinance>=1.0",
]
